[package]
name = "shared_mut_ref"
version = "0.1.0"
edition = "2021"
description = "A crate which introduces a type for sharing a mutable reference and mutating the value behind it."
authors = ["Alexander Vedekhin"]
repository = "https://github.com/alexanderved/shared_mut_ref"
keywords = ["shared mut", "shared mutability"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
